--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.36.0
+streamlit>=1.39.0
 pandas===2.1.1
 akshare==1.15.9
 numpy==1.23.5
@@ -9,7 +9,7 @@ matplotlib== 3.7.2
 mini-racer==0.12.4
 altair==5.2.0
 mdpd==0.2.1     
-openai==1.35.3
+openai>=1.42.0
 pyecharts==2.0.5
 streamlit_echarts==0.4.0
-tornado==6.3.3
+tornado>=6.4.2
